<resources>
    <string name="app_name">BloodDonor</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_sign_gmail">Google SignIn</string>
    <string name="title_activity_sign_number">Login using Mobile</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_address">Address</string>
    <string name="user_dob">DOB</string>
    <string name="save_profile">Save Profile</string>
    <string name="blood_group">Blood Group</string>
    <string name="blood_group_select">Select Blood Group</string>
    <string name="user_mobile_number">Mobile Number</string>
    <string name="err_mandatory_fields_not_entered">Please enter all the mandatory field</string>

    <array name="blood_group_types">
        <item>O</item>
        <item>O+</item>
        <item>O-</item>
        <item>A</item>
        <item>A+</item>
        <item>A-</item>
        <item>B</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB+</item>
        <item>AB-</item>

    </array>
    <string name="instant_validation">(instant validation)</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="title_activity_request_for_blood">RequestForBloodActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
